--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,7 +5,7 @@ header {
 	width: 100%;
 	z-index: 2;
 	background-color: $white;
-
+	
 }
 
 .slider {
@@ -58,6 +58,10 @@ header {
 		img {
 			width: 100%;
 		}
+	}
+	.arr-right, .arr-left {
+		font-size: rem(30);
+		border: 1px solid #ffffff7a;
 	}
 }
 
