--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -8,9 +8,30 @@ header {
 	
 }
 
-.slider {
-	background-image: url("../images/image2.jpg");
+.swiper-container {
+	width: 100%;
+	
+	.slide-1{
+		background-image: url("../images/image2.jpg");
+		background-size: cover;
+		background-position: center;
+	}
+	.slide-2{
+		background-image: url("../images/img8.png");
+		background-size: cover;
+		background-position: center;
+	}
+	.slide-3{
+		background-image: url("../images/img7.jpg");
+		background-size: cover;
+		background-position: center;
+	}
+}
+.slidelayout {
+	background-color: #1919199c;
 	padding: 170px 0px 80px 0px;
+}
+.slider {
 	background-size: cover;
 	background-position: center;
 }
@@ -18,50 +39,48 @@ header {
 	text-align: center;
 	p {
 		color: $white;
+		text-align: center;
 		margin: -10px -15px 0px -15px;
 		padding: 40px 0px;
 		font-size: rem(28);
-		width: 100%;
+		// width: 100%;
 	}
 }
-.slider-arrow-cont {
-	position: relative;
-	top: -230px;
-	right: 0px;
-	padding: 0px 40px;
-}
+
 .arr-left {
-	float: left;
-	padding: 20px;
-	border: 2px solid $white;
+	padding: 20px 20px 0px 20px;
+	background: none!important;
+	// border: 2px solid $white;
+	outline: none;
 	color: $white;
 	i {
-		font-size: rem(18);
+		text-align: center;
+		font-size: rem(30);
 		font-weight: bold;
 	}
 }
 .arr-right {
-	float: right;
-	padding: 20px;
-	border: 2px solid $white;
+	padding: 20px 20px 0px 20px;
+	background: none!important;	
+	// border: 2px solid $white;
+	outline: none;
 	color: $white;
 	i {
-		font-size: rem(18);
+		text-align: center;
+		font-size: rem(30);
 		font-weight: bold;
 	}
 }
 @include mq('lg', max) {
-	.slider-arrow-cont {
-		position: static;
-	}
+	
 	.main-heading {
 		img {
-			width: 100%;
+			width: 90%;
 		}
 	}
 	.arr-right, .arr-left {
 		font-size: rem(30);
-		border: 1px solid #ffffff7a;
+		// border: 1px solid #ffffff7a;
 	}
 }
 
