--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,7 @@
 @import 'partials/_buttons';
 @import 'partials/_forms';
 @import 'partials/_global';
-@import 'partials/_icons-font';
+@import 'partials/_icons-fonts';
 
 //===========================================
     // -Partials End
